--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=bugtracker
+spring.profiles.active=default
+
+# For Debug
+debug=true
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
+
+# Config Database
+spring.datasource.url=${POSTGRES_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
