--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.datasource.url=${POSTGRES_URL}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+spring.jpa.show-sql=true
