feat: added entities user and issue fix: #10 fix: #9

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -8,9 +8,9 @@ logging.level.org.hibernate=DEBUG
 logging.level.com.zaxxer.hikari=DEBUG
 
 # Config Database
-spring.datasource.url=${POSTGRES_URL}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://127.0.0.1:5432/DB_BUG_TRACKER}
+spring.datasource.username=${POSTGRES_USER:user}
+spring.datasource.password=${POSTGRES_PASSWORD:user123}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
