--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,20 +1,24 @@
 spring.application.name=bugtracker
-spring.profiles.active=default
 
 # For Debug
 debug=true
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=DEBUG
-logging.level.com.zaxxer.hikari=DEBUG
+spring.jpa.show-sql=true
 
 # Config Database
 spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://127.0.0.1:5432/DB_BUG_TRACKER}
 spring.datasource.username=${POSTGRES_USER:user}
 spring.datasource.password=${POSTGRES_PASSWORD:user123}
+
+# Config Postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+# Config Migration
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+# Config Auth
+security.jwt.token.secret-key=${SECURITY_JWT_TOKEN_SECRET_KEY:defaultSecretKey}
+security.jwt.token.expiry.hour=${SECURITY_JWT_TOKEN_EXPIRY_HOUR:2}
+security.jwt.token.expiry.zone=${SECURITY_JWT_TOKEN_EXPIRY_ZONE:+00:00}
+
